--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,37 @@
 annotated-types==0.7.0
 anyio==4.9.0
 black==25.1.0
+build==1.2.2.post1
 cachetools==5.5.2
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 coverage==7.8.0
+cryptography==44.0.2
 distro==1.9.0
+docutils==0.21.2
 google-auth==2.39.0
 google-genai==1.11.0
 h11==0.14.0
 httpcore==1.0.8
 httpx==0.28.1
+id==1.5.0
 idna==3.10
 iniconfig==2.1.0
 isort==6.0.1
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
+jeepney==0.9.0
 jiter==0.9.0
+keyring==25.6.0
+markdown-it-py==3.0.0
+mdurl==0.1.2
+more-itertools==10.6.0
 mypy==1.15.0
 mypy-extensions==1.0.0
+nh3==0.2.21
 openai==1.75.0
 packaging==24.2
 pathspec==0.12.1
@@ -25,16 +39,25 @@ platformdirs==4.3.7
 pluggy==1.5.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+pycparser==2.22
 pydantic==2.11.3
 pydantic_core==2.33.1
+Pygments==2.19.1
+pyproject_hooks==1.2.0
 pytest==8.3.5
 pytest-cov==6.1.1
 python-dotenv==1.1.0
+readme_renderer==44.0
 requests==2.32.3
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==14.0.0
 rsa==4.9.1
+SecretStorage==3.3.3
 setuptools==78.1.0
 sniffio==1.3.1
 tqdm==4.67.1
+twine==6.1.0
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 urllib3==2.4.0
